[gd_scene load_steps=2 format=3 uid="uid://cii4n42sv8t0e"]

[ext_resource type="Script" uid="uid://b327yqkxkrliq" path="res://game/hurtbox/hurtbox.gd" id="1_rp0yp"]

[node name="Hurtbox" type="Area3D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_rp0yp")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
